.argocd/.k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scp-deployment
  namespace: scp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scp-deployment-label
  template:
    metadata:
      labels:
        app: scp-app
    spec:
      containers:
        - name: scp-container
          image: abdysamat/spring-certified-professional:59732a75172c0bc69d1312df9ff4d6f976110f62
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
