.argocd/.k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: scp
  name: scp-service
spec:
  selector:
    app: scp-app
  ports:
    - port: 80
      targetPort: 8080
