.argocd/.k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scp-ingress
  namespace: scp
spec:
  ingressClassName: nginx
  rules:
    - host: scp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scp
                port:
                  number: 80
